--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,8 @@
          Name: <input type = "text" name = "name">  <br>
          Department: <input type = "text" name = "department"><br>
          Age:<input type = 'number' name="age">
+         Rollno:<input type ="text" name="rollno">
+         Action(create,read[searching uses rollno], update[key=rollno] or delete):<input type ="text" name="action">
          <input type = "submit" value = "Submit">
       </form>
       
